--- a/app/notes/biscuits.mdx
+++ b/app/notes/biscuits.mdx
@@ -1,7 +1,4 @@
-export const metadata = {
-  title: 'Biscuit recipe',
-  slug: 'biscuits'
-}
+export const title = 'Biscuit recipe'
 
 ```
 3 tsp baking powder
