Add biscuit pics

--- a/app/notes/biscuits.mdx
+++ b/app/notes/biscuits.mdx
@@ -13,3 +13,5 @@ Mix everything dry together, whisk around, drizzle oil while whisking until it l
 Add milk and mix just until it starts to resemble a dough, then either do drop biscuits or roll out to 1cm thick and cut out shapes. I use a mason jar lid as a cookie cutter
 
 Put on oiled cookie sheet or parchment paper at 350 for roughly 25 minutes
+
+<img src="https://pbs.twimg.com/media/Ed4ToCyWkAET53q?format=jpg&name=large" alt="Biscuit" />
