--- a/app/notes/mortgage-dependencies.mdx
+++ b/app/notes/mortgage-dependencies.mdx
@@ -1,3 +1,5 @@
+export const title = 'Mortgage dependencies'
+
 Given a library of calculations, I want to figure out what the raw dependencies that need to be passed in as arguments to each one should be.
 
 For example, this calculation only needs `mortgage.mortgageAmountDollars` and `product.monthlyMortgagePaymentFactor`
