--- a/app/notes/uses.mdx
+++ b/app/notes/uses.mdx
@@ -2,12 +2,18 @@ export const title = 'Uses'
 
 # Computer
 
-* Early 2011 Macbook Pro - with 8GB RAM and a 128GB Samsung 850 Evo SSD. Considering swapping out the disk drive with another storage disk
+* Early 2011 Macbook Pro 13" - with 8GB RAM and a 128GB Samsung 850 Evo SSD. Considering swapping out the disk drive with another storage disk
 
-* Early 2019 Macbook Pro - this is my work machine. There's a [minor flashing issue](https://twitter.com/jacobmparis/status/1264612711830360065?s=20) on the touchbar when it goes into standby, but nothing that's impacted my functionality.
+* 2019 Macbook Pro 15" - this is my work machine. There's a [minor flashing issue](https://twitter.com/jacobmparis/status/1264612711830360065?s=20) on the touchbar when it goes into standby, but nothing that's impacted my functionality.
 
 * Apple Magic keyboard
 
 * Apple Magic trackpad
 
 * [Twelve South Magic Bridge](https://www.amazon.ca/Twelve-South-MagicBridge-Connects-Trackpad/dp/B01N9D63YE?tag=jacobparis-20) – This bridge keeps the keyboard and trackpad acting like a single unit which is great for sitting on the lap or working off the couch streaming from the TV
+
+# Personal
+
+* Powerbeats 3 bluetooth headphones
+
+* iPhone XR 
