--- a/app/notes/band-names.mdx
+++ b/app/notes/band-names.mdx
@@ -1,4 +1,10 @@
+* Balsamic Drizzle
 * Beef Garnish
 * Flight Price History
+* Free Wings Coupon
+* Hoodie Thumbholes
+* Moustache and Below
+* Skip Intro
+* Two-factor Raptor
 
 ...would be a good name for a band
