--- a/app/notes/band-names.mdx
+++ b/app/notes/band-names.mdx
@@ -5,6 +5,7 @@ export const title = 'Good names for bands'
 * Flight Price History
 * Free Wings Coupon
 * Hoodie Thumbholes
+* [HTML5 Supercomputer](https://twitter.com/choffstein/status/1306679877043716102?s=20)
 * Moustache and Below
 * Skip Intro
 * Two-factor Raptor
