--- a/app/notes/react-memoization.mdx
+++ b/app/notes/react-memoization.mdx
@@ -8,4 +8,5 @@ If you need (as proven by metrics) to memoize a component with React.memo, any f
 
 React.useCallback and React.useMemo each have a guaranteed baseline amount of overhead, and they're only worth using when the performance savings of using them outweighs the overhead. In that case, you can use React.useMemo to lazily synchronously get a value protected by a dependency array.
 
-https://kentcdodds.com/blog/usememo-and-usecallback
+## Links
+[When to useMemo and useCallback](https://kentcdodds.com/blog/usememo-and-usecallback)
