--- a/app/notes/screenshot.mdx
+++ b/app/notes/screenshot.mdx
@@ -1,6 +1,6 @@
 export const title = 'Screenshot to clipboard and file'
 
-Open **Automator**
+Open **Automator** and create a new document
 
 ![image](https://user-images.githubusercontent.com/5633704/94887160-912e9080-0443-11eb-852a-dfcd231e2680.png)
 
@@ -127,3 +127,5 @@ Scroll to the bottom of the list and set the shortcut for **Screen Shot to Clipb
 ![image](https://user-images.githubusercontent.com/5633704/94887731-15354800-0445-11eb-97c2-b208878c3d4d.png)
 
 Now if you take a screenshot it will save it as a file in your desired location while also copying the image to clipboard
+
+https://apple.stackexchange.com/questions/311732/copy-screenshot-to-clipboard-in-addition-to-saving-the-file
