--- a/app/notes/band-names.mdx
+++ b/app/notes/band-names.mdx
@@ -9,5 +9,6 @@ export const title = 'Good names for bands'
 * Moustache and Below
 * Skip Intro
 * Two-factor Raptor
+* Smash of Midtones
 
 ...would be a good name for a band
