--- a/app/notes/band-names.mdx
+++ b/app/notes/band-names.mdx
@@ -8,7 +8,8 @@ export const title = 'Good names for bands'
 * [HTML5 Supercomputer](https://twitter.com/choffstein/status/1306679877043716102?s=20)
 * Moustache and Below
 * Skip Intro
-* Two-factor Raptor
 * Smash of Midtones
+* Two-factor Raptor
+* [Urban Turtle](https://twitter.com/provisionalidea/status/1294675119202279424?s=20)
 
 ...would be a good name for a band
