--- a/app/notes/band-names.mdx
+++ b/app/notes/band-names.mdx
@@ -7,6 +7,7 @@ export const title = 'Good names for bands'
 * Hoodie Thumbholes
 * [HTML5 Supercomputer](https://twitter.com/choffstein/status/1306679877043716102?s=20)
 * Moustache and Below
+* Sad Path Messaging
 * Skip Intro
 * Smash of Midtones
 * Two-factor Raptor
