--- a/app/notes/affiliate-portal.mdx
+++ b/app/notes/affiliate-portal.mdx
@@ -2,6 +2,10 @@ export const title = 'Affiliate portal review'
 
 ## Reset password flow does not automatically log in
 
+Instead we say "Password reset! Now logging you in!" and then take them to the log in page.
+
+The lazy fix is to change the copy, the correct fix is to make the log in automatic.
+
 ## ~Deals do not load~
 
 Server error 500 on `http://localhost:3300/api/places/sign`
