--- a/app/notes/common-field-validation.mdx
+++ b/app/notes/common-field-validation.mdx
@@ -14,6 +14,12 @@ There are a variety of formatting symbols used internationally, most prominently
 
 Google has a service called [libphonenumber](https://github.com/google/libphonenumber) which can validate specific numbers to ensure they comply to their specific regional code.
 
+### Recommended rules
+
+- Minimum length of 5 characters (Optional)
+- Maximum length of at least 40 (Optional)
+- No character set restriction
+
 ### Valid phone numbers
 
 - +1 (780) 445 2524 EXT: 2245
