--- a/app/notes/agent-portal.mdx
+++ b/app/notes/agent-portal.mdx
@@ -36,6 +36,7 @@ We can steal this from the lead admin portal since it's almost identically built
 
 # Things to delete
 
+None of these do anything at the moment, so we can kill them and either add back later, implementing each properly one by one or learn that we were better off without them all along
 ## Top bar
 - Search input
 
