--- a/app/notes/bali.mdx
+++ b/app/notes/bali.mdx
@@ -10,13 +10,24 @@ Covid insurance is mandatory. Safetywing is a little more than $10/week and can 
 
 ## The flights
 
-All flights to Bali now route through Jakarta, where you're required to submit a PCR test. Upon landing in Bali, you're required to submit another PCR test that was taken within the prior 24 hours. This timing is almost impossible (given the length of flights and the likelihood of layovers) so the recommendation is to plan to stay in Jakarta for a day and get the second swab test there.
+~All flights to Bali now route through Jakarta, where you're required to submit a PCR test. Upon landing in Bali, you're required to submit another PCR test that was taken within the prior 24 hours. This timing is almost impossible (given the length of flights and the likelihood of layovers) so the recommendation is to plan to stay in Jakarta for a day and get the second swab test there.~
+
+As of December 18 this is no longer valid. Both Jakarta and Bali swab tests are valid as long as they are within 7 days old.
+
+There are onl ytwo airports in europe that fly out to Bali: Amsteram an dIstanbuk.
+
+Amsterdam is the cheapest option, but all its flights leave early in the morning, and all my flights there arrive in the evening. Most likely I'm going to have to stay overnight in the airport, whether that means in an airport hotel or airside in the terminal.
+
+The ballpark price from Tenerife to Bali is $1000 before airline fees.
 
 ## Where to stay
 
 The best snorkeling is in the northeast and then the west. Amed is top spot, but there's no nomad community there.
 
 Conversely, Canggu remains the top spot for nomads, but there's no snorkeling there. A shame.
+
+A number of folks on Nomadlist have toyed with the idea of renting a big villa to pack full. Most of them arrive mid january and they're willing to spend up to $1000/m
+
 
 ## Scooters
 
