--- a/app/notes/bali.mdx
+++ b/app/notes/bali.mdx
@@ -2,7 +2,7 @@ export const title = 'Bali'
 
 ## The visa
 
-You need a visa to get into Bali. The best option right now is the business e-visa, where a company in Bali sponsors you to come out for 'commerce and business discussions'. The going rate is approximately 8,500,000 IDR and it takes a few days to process.
+You need a visa to get into Bali. The best option right now is the business e-visa, where a company in Bali sponsors you to come out for 'commerce and business discussions'. The going rate for the express visa is approximately 8,500,000 IDR and it takes a few days to process. There's also the slower process, measured at a week or two, for 6,000,000 IDR. My visa agent is Monika from Bali Solve, available on WhatsApp at +62 821-4564-0227. I applied on Thursday morning for the Express Business visa and it was ready and returned by Monday morning.
 
 The visa allows you to stay for 2 months, followed by up to 4 extensions at $50 apiece for a total of 6 months on the island.
 
@@ -14,7 +14,7 @@ Covid insurance is mandatory. Safetywing is a little more than $10/week and can 
 
 As of December 18 this is no longer valid. Both Jakarta and Bali swab tests are valid as long as they are within 7 days old.
 
-There are onl ytwo airports in europe that fly out to Bali: Amsteram an dIstanbuk.
+There are only two airports in europe that fly out to Bali: Amsteram and Istanbul.
 
 Amsterdam is the cheapest option, but all its flights leave early in the morning, and all my flights there arrive in the evening. Most likely I'm going to have to stay overnight in the airport, whether that means in an airport hotel or airside in the terminal.
 
