--- a/app/notes/bali.mdx
+++ b/app/notes/bali.mdx
@@ -10,7 +10,7 @@ Covid insurance is mandatory. Safetywing is a little more than $10/week and can 
 
 ## The flights
 
-~All flights to Bali now route through Jakarta, where you're required to submit a PCR test. Upon landing in Bali, you're required to submit another PCR test that was taken within the prior 24 hours. This timing is almost impossible (given the length of flights and the likelihood of layovers) so the recommendation is to plan to stay in Jakarta for a day and get the second swab test there.~
+All flights to Bali now route through Jakarta, where you're required to submit a PCR test. ~Upon landing in Bali, you're required to submit another PCR test that was taken within the prior 24 hours. This timing is almost impossible (given the length of flights and the likelihood of layovers) so the recommendation is to plan to stay in Jakarta for a day and get the second swab test there.~
 
 As of December 18 this is no longer valid. Both Jakarta and Bali swab tests are valid as long as they are within 7 days old.
 
