--- a/app/notes/reporting-network-error.mdx
+++ b/app/notes/reporting-network-error.mdx
@@ -4,3 +4,5 @@ Open DevTools and go to the Network tab
 
 Find the request that's failing. You can see in the preview tab if it’s the one with all the errors
 Right clicking the blue highlighted bit and “copy as curl” will copy a string that lets us reproduce that network request exactly, so we can look and see what you entered in the form, if there’s anything missing, and whether the services are returning what they should for it
+
+![image](https://user-images.githubusercontent.com/5633704/102883042-42dbcd00-4447-11eb-979c-a40232e02afc.png)
